MDEV-32844: THD::rli_fake/rgi_fake not cleared on new connection

Signed-off-by: Kristian Nielsen <knielsen@knielsen-hq.org>